--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
     <title>Severin's blog</title><meta charset="UTF-8">
+    
+    <link rel="icon" type="image/jpg" href="/favicon.jpg"/>
+    <link rel="shortcut icon" type="image/jpg" href="/favicon.jpg"/>
+    <link rel="apple-touch-icon" type="image/jpg" href="/favicon.jpg"/>
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
