--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <title>Severin's blog</title><meta charset="UTF-8">
+    <title>Чеклисты</title><meta charset="UTF-8">
     
-    <link rel="icon" type="image/jpg" href="/favicon.jpg"/>
-    <link rel="shortcut icon" type="image/jpg" href="/favicon.jpg"/>
-    <link rel="apple-touch-icon" type="image/jpg" href="/favicon.jpg"/>
+    <link rel="icon" type="image/jpg" href="/favicon.png"/>
+    <link rel="shortcut icon" type="image/jpg" href="/favicon.png"/>
+    <link rel="apple-touch-icon" type="image/jpg" href="/favicon.png"/>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    Hello World!    
+    <ul>
+        <li><a href="checklists/checklist1.html">Чеклист 1</a></li>
+        <li><a href="checklists/checklist1.html">Чеклист 2</a></li>
+        <li><a href="checklists/checklist1.html">Чеклист 3</a></li>
+    </ul>   
 </body>
 </html>
