--- a/checklists/checklist2.html
+++ b/checklists/checklist2.html
@@ -2,14 +2,23 @@
 <html lang="ru">
 
 <head>
+    <title>Договор 2</title>
+
+    <link rel="icon" type="image/jpg" href="../images/favicon.png"/>
+    <link rel="shortcut icon" type="image/jpg" href="../images/favicon.png"/>
+    <link rel="apple-touch-icon" type="image/jpg" href="../images/favicon.png"/>
+    
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Чеклист 2</title>
 </head>
 
 <body>
-    <h1>Мой чеклист</h1>
-    <ul>
+    <header>
+        <h1><h1><img src="../images/logo.png" alt="Логотип">Договор</h1>
+    </header>
+    <ul class="checklist">
         <li>
             <label>
                 <input type="checkbox" name="item1" value="Item 1"> Item 1
@@ -26,6 +35,7 @@
             </label>
         </li>
     </ul>
+    <a href="../index.html">На главную</a>
 </body>
 
 </html>
