--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>Чеклисты</title><meta charset="UTF-8">
+    <title>Чеклисты договоров</title><meta charset="UTF-8">
     
-    <link rel="icon" type="image/jpg" href="/favicon.png"/>
-    <link rel="shortcut icon" type="image/jpg" href="/favicon.png"/>
-    <link rel="apple-touch-icon" type="image/jpg" href="/favicon.png"/>
+    <link rel="icon" type="image/jpg" href="images/favicon.png"/>
+    <link rel="shortcut icon" type="image/jpg" href="images/favicon.png"/>
+    <link rel="apple-touch-icon" type="image/jpg" href="images/favicon.png"/>
+
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <ul>
+    <header>
+        <h1><img src="images/logo.png" alt="Логотип">Чеклисты проверки договоров</h1>
+    </header>
+
+    <ul id="listOfChecklists">
         <li><a href="checklists/checklist1.html">Чеклист 1</a></li>
-        <li><a href="checklists/checklist1.html">Чеклист 2</a></li>
-        <li><a href="checklists/checklist1.html">Чеклист 3</a></li>
+        <li><a href="checklists/checklist2.html">Чеклист 2</a></li>
+        <li><a href="checklists/checklist3.html">Чеклист 3</a></li>
     </ul>   
+
+    <footer>
+         <p>© 2024</p>
+    </footer>
 </body>
 </html>
