--- a/checklists/checklist2.html
+++ b/checklists/checklist2.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <h1><h1><img src="../images/logo.png" alt="Логотип">Договор</h1>
+        <h1>Договор</h1>
     </header>
     <ul class="checklist">
         <li>
