--- a/checklists/checklist2.html
+++ b/checklists/checklist2.html
@@ -35,7 +35,10 @@
             </label>
         </li>
     </ul>
-    <a href="../index.html">На главную</a>
+    <a id="indexLink" href="../index.html">На главную</a>
+    <footer>
+        <p>© 2024</p>
+   </footer>
 </body>
 
 </html>
