Rename the header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <h1>Чеклисты проверки договоров</h1>
+        <h1>Проверка договоров</h1>
     </header>
 
     <ul id="listOfChecklists">
