--- a/checklists/checklist1.html
+++ b/checklists/checklist1.html
@@ -4,9 +4,9 @@
 <head>
     <title>Договор 1</title>
 
-    <link rel="icon" type="image/jpg" href="../images/favicon.png"/>
-    <link rel="shortcut icon" type="image/jpg" href="../images/favicon.png"/>
-    <link rel="apple-touch-icon" type="image/jpg" href="../images/favicon.png"/>
+    <link rel="icon" type="image/jpg" href="../images/favicon.png" />
+    <link rel="shortcut icon" type="image/jpg" href="../images/favicon.png" />
+    <link rel="apple-touch-icon" type="image/jpg" href="../images/favicon.png" />
 
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 
@@ -35,10 +35,12 @@
             </label>
         </li>
     </ul>
+    <button onclick="setUnchecked()">Снять выделение</button>
     <a id="indexLink" href="../index.html">На главную</a>
     <footer>
         <p>© 2024</p>
-   </footer>
+    </footer>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
