Add deselect and congratulation scripts

--- a/checklists/checklist1.html
+++ b/checklists/checklist1.html
@@ -35,7 +35,7 @@
             </label>
         </li>
     </ul>
-    <button onclick="setUnchecked()">Снять выделение</button>
+    <button id="uncheckButton">Снять выделение</button>
     <a id="indexLink" href="../index.html">На главную</a>
     <footer>
         <p>© 2024</p>
