--- a/checklists/checklist3.html
+++ b/checklists/checklist3.html
@@ -21,17 +21,17 @@
     <ul class="checklist">
         <li>
             <label>
-                <input type="checkbox" name="item1" value="Item 1"> Item 1
+                <input type="checkbox" name="item1" value="Пункт 1"> Пункт 1
             </label>
         </li>
         <li>
             <label>
-                <input type="checkbox" name="item2" value="Item 2"> Item 2
+                <input type="checkbox" name="item2" value="Пункт 2"> Пункт 2
             </label>
         </li>
         <li>
             <label>
-                <input type="checkbox" name="item3" value="Item 3"> Item 3
+                <input type="checkbox" name="item3" value="Пункт 3"> Пункт 3
             </label>
         </li>
     </ul>
