Fix footer with flexbox

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
         <h1>Проверка договоров</h1>
     </header>
 
-    <ul id="listOfChecklists">
-        <li><a href="checklists/checklist1.html">Чеклист 1</a></li>
-    </ul>   
+    <main>
+        <ul id="listOfChecklists">
+            <li><a href="checklists/checklist1.html">Чеклист 1</a></li>
+        </ul>
+    </main>
 
     <footer>
          <p>© 2024</p>
