--- a/checklists/checklist1.html
+++ b/checklists/checklist1.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-    <title>Договор 1</title>
+    <title>Договор</title>
 
     <link rel="icon" type="image/jpg" href="../images/favicon.png" />
     <link rel="shortcut icon" type="image/jpg" href="../images/favicon.png" />
@@ -18,25 +18,26 @@
     <header>
         <h1>Договор</h1>
     </header>
-    <ul class="checklist">
-        <li>
-            <label>
-                <input type="checkbox" name="item1" value="Пункт 1"> Пункт 1
-            </label>
-        </li>
-        <li>
-            <label>
-                <input type="checkbox" name="item2" value="Пункт 2"> Пункт 2
-            </label>
-        </li>
-        <li>
-            <label>
-                <input type="checkbox" name="item3" value="Пункт 3"> Пункт 3
-            </label>
-        </li>
-    </ul>
-    <button id="uncheckButton">Снять выделение</button>
-    <a id="indexLink" href="../index.html">На главную</a>
+
+    <main>
+        <!-- Редактируем этот блок -->
+        <ul class="checklist">
+            <li>
+                <label>
+                    <input type="checkbox"> обязанность покупателя передать поставщику невскрытый образец некачественного товара с маркировкой изготовителя, способ и срок передачи
+                </label>
+            </li>
+            <li>
+                <label>
+                    <input type="checkbox"> информация о проведении поставщиком испытаний качества товара
+                </label>
+            </li>
+        </ul>
+
+        <button id="uncheckButton">Снять выделение</button>
+        <a id="indexLink" href="../index.html">На главную</a>
+    </main>
+
     <footer>
         <p>© 2024</p>
     </footer>
