--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <main>
         <ul id="listOfChecklists">
-            <li><a href="checklists/checklist1.html">Чеклист 1</a></li>
+            <li><a href="checklists/clientDeliveryContract.html">ДОГОВОР ПОСТАВКИ КЛИЕНТУ</a></li>
         </ul>
     </main>
 
